# ModernMETIS

./: README.md
codes/partition/partition01/: main.cpp
codes/partition/partition02/: SetEnv.ps1  example_a.graph.part.4  main.cpp
codes/partition/partition03/: example_b.graph.part.4  main.cpp
codes/partition/partition04/: CMakeLists.txt  main.cpp
codes/partition/partition05/: main.cpp
codes/partition/partition06/: main.cpp
codes/partition/partition07/: SetEnv.ps1  main.cpp
codes/partition/partition08/: CMakeLists.txt  main.cpp
codes/partition/partition09/: main.cpp
codes/partition/partition10/: example_d.graph  example_d.graph.part.4  main.cpp
